@@ -1803,6 +1803,54 @@ SWITCH: for ($q) {
     last;
   };
   #}}}
+
+  ###########################################
+  # Media (files) download/upload
+  ###########################################
+  #
+  #{{{ GET /media/<file> : Get a file
+  #
+  $URI = qr{^/media/(.*)$};
+  apilib::GET( $_, $URI ) && do {
+    $_->path_info =~ m/$URI/;
+    my $filename=$1;
+
+    # Must be authenticated
+    if ( not $authenticated_user =~ /(\w+)/ ) {
+      apilib::ERROR( 401, "Permission denied",
+        "A suitable authentication must be done before getting files" );
+      last;
+    }
+    $authenticated_user = $1;
+    $ENV{OARDO_BECOME_USER} = $authenticated_user;
+
+    # Security escaping 
+    $filename =~ s/(\\*)(`|\$)/$1$1\\$2/g;
+
+    # Get the filename and replace "~" by the home directory
+    my $file="/".$filename;
+    my @user_infos=getpwnam($authenticated_user);
+    $file =~ s|/~/|@user_infos[7]/|;  
+ 
+    # Check file existency
+    if (system("$OARDODO_CMD","test","-f","$file") != 0) {
+      apilib::ERROR(404, "Not found", "File not found: $file");
+      last;  
+    }
+    
+    # Check file readability
+    if (system("$OARDODO_CMD","test","-r","$file") != 0) {
+      apilib::ERROR(403, "Forbidden","File could not be read: $file" );
+      last;  
+    }
+
+    # Output the file
+    print $q->header( -status => 200, -type => "application/octet-stream" );
+    print `$OARDODO_CMD cat $file`;
+    last;
+  };
+  #}}}
+
    
   ###########################################
   # Html stuff
