@@ -912,6 +912,7 @@ sub get_ext($) {
   ($content_type)=split(/\s*;\s*/,$content_type);
   if    ($content_type eq "text/yaml")  { return "yaml"; }
   elsif ($content_type eq "text/html")  { return "html"; }
+  elsif ($content_type eq "application/octet-stream")  { return "yaml"; }
   elsif ($content_type eq "application/json")  { return "json"; }
   elsif ($content_type eq "application/x-gzip")  { return "tgz"; }
   #elsif ($content_type eq "application/x-www-form-urlencoded")  { return "json"; }
