@@ -69,6 +69,7 @@ version 2.5.0:
   - Add stdout and stderr files of each job in oarstat output.
   - API now supports fastcgi (big performance raise!)
   - Add "-f" option to oarnodesetting to read hostnames from a file.
+  - API can get files (GET /media/<file_path>)
 
 version 2.4.4:
 --------------
